# microservice-product-rust

./: Cargo.toml  README.md  build_output.txt  build_release.txt
src/: main.rs
src/application/: create_product.rs  delete_product.rs  get_product.rs  get_product_by_id.rs  mod.rs  update_product.rs
src/domain/entity/: mod.rs  product_entity.rs  product_input.rs
src/domain/repository/: product_repository.rs
src/infrastructure/: mod.rs  mongo_connection.rs  mongo_product_repository.rs
src/presentation/: graphql_schema.rs  mod.rs
