[package]
name = "products_service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.6"
async-graphql = { version = "6.0", features = ["bson","chrono"] }
async-graphql-axum = "6.0"
mongodb = "2.8"
serde = { version = "1.0", features = ["derive"] }
bson = { version = "2", features = ["chrono"] }
futures = "0.3"
thiserror = "1.0"
dotenvy = "0.15"
lazy_static = "1.4"
async-trait = "0.1"